# link-grammar-vapi

./: README.md  meson.build
src/: hello-link-grammar.vala
vapi/: link-grammar.vapi  linkgrammar.vapi
